pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
  namespace: pacman
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: pacman:2.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "1m"
