pacman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman
  namespace: pacman
spec:
  rules:
  - host: pacman.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pacman-service
            port:
              number: 80
